--- a/enciclomovie/pubspec.yaml
+++ b/enciclomovie/pubspec.yaml
@@ -1,6 +1,6 @@
 name: enciclomovie
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -24,6 +24,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.5
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   build_runner: ^2.4.13
@@ -37,3 +38,4 @@ flutter:
 
   assets:
     - .env
+    - assets/loaders/
