--- a/enciclomovie/android/app/build.gradle
+++ b/enciclomovie/android/app/build.gradle
@@ -23,7 +23,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.enciclomovie"
-        minSdk flutter.minSdkVersion
+        //minSdk flutter.minSdkVersion
+        minSdk 23
         targetSdk flutter.targetSdkVersion
         versionCode flutter.versionCode
         versionName flutter.versionName
